Fix structure of HTML

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
         <ul>
             <li><a href="recipes/birria.html">Birria Recipe</a></li>
-            <li><a href="recipes/cheesecake.html">Cheescake Recipe</a></li>
+            <li><a href="recipes/cheesecake.html">Cheescake Recipe</a></li>q
             <li><a href="recipes/mango-lemonade.html">Mango Lemonade Recipe</a></li>
         </ul>
-        
-
     </body>
 </html>
