--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -9,7 +9,7 @@
         <h3><a href="../index.html">Home</a></h3>
         <h1>Cheescake Recipe</h1>
 
-        <img src="/images/cheescake.jpeg" alt="Cheesecake">
+        <img src="../images/cheescake.jpeg" alt="Cheesecake">
 
         <p>
             Cheesecake, a classic dessert adored for its creamy texture and
