--- a/recipes/mango-lemonade.html
+++ b/recipes/mango-lemonade.html
@@ -9,7 +9,7 @@
         <h3><a href="../index.html">Home</a></h3>
         <h1>Mango Lemonade Recipe</h1>
 
-        <img src="/images/mango-lemonade.jpeg" alt="Mango Lemonade">
+        <img src="../images/mango-lemonade.jpeg" alt="Mango Lemonade">
 
         <p>
             Mango Lemonade is a vibrant and refreshing drink that captures 
